# crcmod-plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tbump.toml
.github/workflows/: build.yml  pythonpackage.yml
lib/: _crcfunext.c
src/crcmod/: __init__.py  _crcfunpy.py  _version.py  crcmod.py  predefined.py  types.py
tests/: examples.py  test_crcmod.py
