[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crcmod-plus"
version = "2.3.1"
authors = [{ name = "Ray Buvel", email = "rlbuvel@gmail.com" }]
description = "CRC generator - modernized"
readme = "README.md"
requires-python = ">=3.9"
maintainers = [{ name = "Tamas Nepusz", email = "tamas@sxd.hu" }]
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/ntamas/crcmod-plus/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ntamas/crcmod-plus#readme"
Issues = "https://github.com/ntamas/crcmod-plus/issues"
Source = "https://github.com/ntamas/crcmod-plus"

[project.optional-dependencies]
dev = ["pytest"]

[tool.cibuildwheel]
enable = ["cpython-freethreading", "pypy"]

[tool.ruff.lint.extend-per-file-ignores]
"predefined.py" = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crcmod = ["py.typed"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py314t, py314, py313t, py313, py312, py311, py310, py39, type

[testenv]
deps = pytest
commands = pytest tests

[testenv:type]
deps = mypy
commands = mypy src
"""
